[package]
name = "eth_util"
version = "0.0.0"
description = "Rust utility canister"
authors = ["DFINITY Foundation"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
ic-eth = "0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
